--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-query-boolean",
+  "name": "express-query-null",
   "version": "0.0.1",
   "description": "Convert query strings to null for express/connect applications.",
   "main": "index.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Jhoy1992/express-query-boolean.git"
+    "url": "git+https://github.com/Jhoy1992/express-query-null.git"
   },
   "keywords": [
     "express",
